Adding creation  activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SettingsActivity"></activity>
-        <activity android:name=".CreationActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".CreationActivity" />
     </application>
 
 </manifest>
