--- a/Monopoly/app/build.gradle
+++ b/Monopoly/app/build.gradle
@@ -26,6 +26,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -34,6 +35,9 @@ dependencies {
     implementation 'com.muddzdev:styleabletoast:2.0.1'
     implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
     implementation 'com.tapadoo.android:alerter:3.0.2'
+    implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.tomer:fadingtextview:2.5'
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
 }
