--- a/Monopoly/app/build.gradle
+++ b/Monopoly/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     implementation 'com.muddzdev:styleabletoast:2.0.1'
     implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
     implementation 'com.tapadoo.android:alerter:3.0.2'
@@ -40,4 +41,5 @@ dependencies {
     implementation 'com.tomer:fadingtextview:2.5'
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
+    implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
 }
