Add activity with adding players

--- a/Monopoly/app/src/main/AndroidManifest.xml
+++ b/Monopoly/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".GameActivity" />
+        <activity android:name=".AmountOfPlayersActivity"></activity>
     </application>
 
 </manifest>
