--- a/Monopoly/app/build.gradle
+++ b/Monopoly/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
+    implementation 'com.github.GrenderG:Toasty:1.3.0'
 }
