--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+    sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/color'] } }
 }
 
 dependencies {
