--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,9 @@
         <activity
             android:name="com.example.danila.minerandroid.ChooseLevelActivity"
             android:configChanges="orientation"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            >
         </activity>
-        
+
         <activity
             android:name="com.example.danila.minerandroid.GameActivity"
             android:configChanges="orientation"
@@ -31,6 +27,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.example.danila.minerandroid.MenuActivity"
+            android:configChanges="orientation"
+            >
+        </activity>
+
+        <activity
+            android:name="com.example.danila.minerandroid.RecordsTableActivity"
+            android:configChanges="orientation"
+            >
+        </activity>
+
+
 
 
     </application>
