--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,21 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <service
+                android:name=".NotificationService"
+                android:process=":remote">
+        </service>
 
-        <activity
-                android:name=".SettingsActivity"
-                android:label="@string/title_activity_settings"></activity>
         <activity android:name=".InstructionActivity"/>
+        <activity android:name=".PrefSettings"/>
+
     </application>
 
 </manifest>
