--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateUnspecified|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,14 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"/>
         <activity android:name=".ProfileActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".CreationActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ThemeActivity"
-            android:screenOrientation="portrait"></activity>
+           />
+        <activity android:name=".CreationActivity" />
+        <activity android:name=".ThemeActivity" />
     </application>
 
 </manifest>
