--- a/Monopoly/app/build.gradle
+++ b/Monopoly/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:viewmodel:1.1.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test:rules:1.1.1'
