--- a/Monopoly/app/src/main/AndroidManifest.xml
+++ b/Monopoly/app/src/main/AndroidManifest.xml
@@ -35,4 +35,11 @@
             android:theme="@style/AppTheme" />
     </application>
 
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:xlargeScreens="true"
+        android:anyDensity="true" />
+
 </manifest>
