--- a/Monopoly/app/src/main/AndroidManifest.xml
+++ b/Monopoly/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         android:normalScreens="true"
         android:largeScreens="true"
         android:xlargeScreens="true"
-        android:anyDensity="true" />
+        android:anyDensity="true"
+        tools:ignore="ManifestOrder" />
 
 </manifest>
