--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".GameActivities.MainMenu.MainMenuActivity"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|screenSize">
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,22 +19,14 @@
         </activity>
         <activity
             android:name=".GameActivities.Settings.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|screenSize"/>
-        <activity android:name=".GameActivities.CharacterCreation.CharacterCreationActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|screenSize"/>
+            android:label="@string/title_activity_settings" />
+        <activity android:name=".GameActivities.CharacterCreation.CharacterCreationActivity" />
         <activity
             android:name=".GameActivities.InLocation.InLocationActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_in_location"
             android:theme="@style/FullscreenTheme" />
         <activity
             android:name=".GameActivities.FightActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fight"
             android:theme="@style/FullscreenTheme"></activity>
     </application>
