--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
         </activity>
         <activity android:name=".SettingsActivity"></activity>
         <activity android:name=".InstructionActivity" />
-
+        <activity android:name=".FinishGame" />
         <service android:name=".NotificationService" />
+        <service android:enabled = "true" android:name=".MusicService"/>
     </application>
 
 </manifest>
