--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateUnspecified|adjustResize">
+            android:windowSoftInputMode="stateUnspecified">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,10 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
-        <activity android:name=".ProfileActivity"
-           />
-        <activity android:name=".CreationActivity" />
-        <activity android:name=".ThemeActivity" />
+        <activity android:name=".CreationActivity"/>
+        <activity android:name=".ThemeActivity"/>
     </application>
 
 </manifest>
