> Вынесены константы > Добавлены тесты > Исправлены некоторые замечания "инспектора"

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
+    android.defaultConfig.vectorDrawables.useSupportLibrary = true
     defaultConfig {
         applicationId "com.shminesweeper.shminesweeper"
         minSdkVersion 18
