--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="sample.avightclav.checkers">
+          xmlns:tools="http://schemas.android.com/tools" package="sample.avightclav.checkers">
 
     <application
-            android:allowBackup="true"
+            android:allowBackup="false"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -18,10 +18,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".GameActivity" android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".activities.GameActivity" android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
+        <activity android:name=".activities.CreateCustomFieldActivity"/>
 
-        <service android:name=".SaveGameService" />
+        <service android:name=".services.SaveGameService" />
 
     </application>
 
