--- a/GettingThingsDone/app/src/main/AndroidManifest.xml
+++ b/GettingThingsDone/app/src/main/AndroidManifest.xml
@@ -3,14 +3,17 @@
           package="com.example.gettingthingsdone">
 
     <application
-            android:allowBackup="true"
             android:name=".GTDApplication"
+            android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <provider android:authorities="com.example.gettingthingsdone"
+                  android:name=".CustomContentProvider"/>
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
