--- a/GettingThingsDone/app/src/main/AndroidManifest.xml
+++ b/GettingThingsDone/app/src/main/AndroidManifest.xml
@@ -4,15 +4,15 @@
 
     <application
             android:name=".GTDApplication"
-            android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme" android:fullBackupContent="@xml/backup_descriptor">
         <provider android:authorities="com.example.gettingthingsdone"
-                  android:name=".CustomContentProvider"/>
-        <activity android:name=".MainActivity">
+                  android:name=".CustomContentProvider" android:exported="false"/>
+        <activity android:name=".MainActivity"
+                  android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
