--- a/Fahrenheit/app/src/main/AndroidManifest.xml
+++ b/Fahrenheit/app/src/main/AndroidManifest.xml
@@ -4,14 +4,16 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/ic_l"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@mipmap/ic_l_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ProgressActivity">
+        <activity android:name=".ProgressActivity"
+                  android:configChanges="orientation|screenSize">
         </activity>
-        <activity android:name=".SettingsActivity">
+        <activity android:name=".SettingsActivity"
+                  android:configChanges="orientation|screenSize">
         </activity>
 
         <service
