--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".InfoActivity"
+        <activity android:name=".fragments.info.InfoActivity"
                   android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
     </application>
