--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,21 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.eugenia.game_2048"
-        minSdkVersion 15
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    testOptions {
+        unitTests {
+            unitTests.includeAndroidResources = true
         }
     }
 }
@@ -23,8 +28,13 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test:core:1.0.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation 'org.robolectric:robolectric:4.0.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:gridlayout-v7:28.0.0'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 }
