--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".GameActivity"></activity>
         <activity android:name=".RulesActivity"></activity>
+        <service android:name=".MusicService" android:enabled="true" />
     </application>
 
 </manifest>
