--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,13 @@
                   android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!--<service android:name="khoroshkov.androidproject.MusicService" />-->
+        <activity android:name=".PlaylistActivity">
+        </activity>
+
+    <!--<service android:name="khoroshkov.androidproject.MusicService" />-->
     </application>
 
 </manifest>
